# TODO_APP

./: BUILD_WINDOWS_ACTION_NOTES.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml  build.yml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs
src/animations/: variants.ts
src/components/calendar/: CalendarNav.tsx  DayCell.tsx  DayDetailPanel.tsx  HeatmapCalendar.tsx  MonthSummaryCard.tsx
src/components/charts/: DailyCompletionLineChart.tsx  MonthlyCompletionBarChart.tsx  TaskCompletionBarChart.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/settings/: AboutSection.tsx  BackupSection.tsx  DangerZone.tsx  TaskManager.tsx  ThemeSection.tsx
src/components/statistics/: StatCard.tsx  StatCardGrid.tsx
src/components/today/: AddTaskInput.tsx  GreetingHeader.tsx  ProgressCard.tsx  TaskList.tsx  TaskRow.tsx
src/components/ui/: Button.tsx  (+7 more)
src/db/: backupRepository.ts  client.ts  dailyRecordsRepository.ts  settingsRepository.ts  taskCompletionsRepository.ts  tasksRepository.ts
src/hooks/: useMidnightRollover.ts  useTheme.ts
src/pages/: CalendarPage.tsx  SettingsPage.tsx  StatisticsPage.tsx  TodayPage.tsx
src/state/: useDailyRecordStore.ts  useSettingsStore.ts  useTaskStore.ts  useUIStore.ts
src/types/: dailyRecord.ts  index.ts  settings.ts  statistics.ts  task.ts
src/utils/: date.ts  statistics.ts  streaks.ts  validation.ts
