[package]
name = "daily-consistency-tracker"
version = "1.0.0"
description = "A daily consistency tracker application"
authors = ["you"]
edition = "2021"

[lib]
name = "daily_consistency_tracker_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
